syntax = "proto3";

package messages.v1;

option go_package = "github.com/bd878/gallery/server/api";

service Messages {
  rpc GetServers(GetServersRequest) returns (GetServersResponse) {}
  rpc SaveMessage(SaveMessageRequest) returns (SaveMessageResponse) {}
  rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse) {}
  rpc ReadUserMessages(ReadUserMessagesRequest) returns (ReadUserMessagesResponse) {}
}

message Message {
  uint32 id = 1;
  uint32 user_id = 2;
  string create_time = 3;
  bytes value = 4;
  string file_name = 5;
  string file_id = 6;
  uint64 update_utc_nano = 7;
}

message ReadUserMessagesRequest {
  uint32 user_id = 1;
  int32 offset = 2;
  int32 limit = 3;
  bool asc = 4;
}

message ReadUserMessagesResponse {
  repeated Message messages = 1;
  bool is_last_page = 2;
}

message UpdateMessageRequest {
  Message message = 1;
}

message UpdateMessageResponse {
  Message message = 1;
}

message SaveMessageRequest {
  Message message = 1;
}

message SaveMessageResponse {
  Message message = 1;
}

message GetServersRequest {}

message GetServersResponse {
  repeated Server servers = 3;
}

message Server {
  string id = 1;
  string raft_addr = 2;
  bool is_leader = 3;
}